Crash in [@ nvd3d9wrapx.dll | FreeLibrary]
Categories
(External Software Affecting Firefox :: Other, defect)
Tracking
(firefox74+ fixed, firefox75 fixed)
People
(Reporter: pascalc, Assigned: toshi)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
47 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-1d3ffa19-c138-4d95-afd9-a17980200221.
Top 2 frames of crashing thread:
0 nvd3d9wrapx.dll nvd3d9wrapx.dll@0x28bb
1 kernelbase.dll FreeLibrary
Significant number of crashes in 74 beta with an Nvidia dll.
| Reporter | ||
Comment 1•5 years ago
|
||
Toshihito, could it be related to bug 1607574?
The "nvd3d9wrap.dll | SharedLibraryInfo::GetInfoForSelf" signature from bug 1607574 is also back on 74 beta, should I file a separate bug about this one or add the signature to this bug? Thanks
| Assignee | ||
Comment 2•5 years ago
|
||
Ah, this is a new issue. The workaround I added was not enough. I used xul!GetVersion here, but it still calls to LoadLibrary via version!GetFileVersionInfoSizeExW, which ends up with the same crash. This can be easily avoided by using a fake version string.
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 3•5 years ago
|
||
We added a workaround to skip LoadLibraryEx avoid NVIDIA's crash (bug 1607574),
however we still hit the same crash via the call to xul!GetVersion. This patch
removes that call, and put an empty string as the version of detoured.dll instead.
Comment 5•5 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 6•5 years ago
|
||
Comment on attachment 9128260 [details]
Bug 1617188 - Do not call GetVersion(detoured.dll) if nvd3d9wrapx.dll is loaded. r=gerald
Beta/Release Uplift Approval Request
- User impact if declined: Firefox crashes when Nvidia's shim driver was injected into the tab process. We shipped a fix for bug 1607574, but it was not sufficient.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The change affects only a targeted condition which would hit the crash. As a side effect, we lose the version of detoured.dll from the callstack of telemetry in that limited condition, but currently detoured.dll has no version.
- String changes made/needed: None
| Reporter | ||
Comment 7•5 years ago
|
||
Comment on attachment 9128260 [details]
Bug 1617188 - Do not call GetVersion(detoured.dll) if nvd3d9wrapx.dll is loaded. r=gerald
Low risk stability fix, uplift approved for 74.0b8, thanks.
Comment 8•5 years ago
|
||
| bugherder uplift | ||
Description
•