Bug 1617188 - Do not call GetVersion(detoured.dll) if nvd3d9wrapx.dll is loaded.  r=gerald a=pascalc

We added a workaround to skip `LoadLibraryEx` avoid NVIDIA's crash (bug 1607574),
however we still hit the same crash via the call to `xul!GetVersion`.  This patch
removes that call, and put an empty string as the version of detoured.dll instead.

Differential Revision: https://phabricator.services.mozilla.com/D63735

--HG--
extra : source : 3769abf253b9072f925c4c0adf0b50993a4b511d